updated BCIT image link and correct contrast for website

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,8 +1,8 @@
 h1 {
-    color: darkslateblue;
+    color: #2d2d4d;
 }
 
 body {
 
-    background-color: wheat;
+    background-color: #f5deb3;
 }
